added functionality to reset city button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-        <h1>☀️Weather Report For</h1>
+        <h1>Weather Report For</h1>
         <h2 id= "cityDisplay">New York</h2>
     </section>
 
@@ -33,8 +33,10 @@
     <section>
         <h2>Which city?</h2>
         <label for="city">City</label>
+        <form id = "cityForm">
         <input value= "New York" name="city">
-        <button>Reset</button>
+        <button id= "resetCity">Reset</button>
+        </form>
     </section>
 
     <section>
