Removes non-semantic form element

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <h1>Weather Report</h1>
         <h2> in <span id="cityName">Seattle</span></h2>
         
-        <form action="">
+        <div id="cityControls">
             <label for="changeCity">Change the city:</label>
             <input type="text" id="changeCity" name="changeCity" placeholder="Seattle" value="">
             <button type="reset" name="resetButton" id="resetButton">Reset</button>
-        </form>
+        </div>
     </header>
     <main>
         <section id="changeTemp">
