--- a/index.html
+++ b/index.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+    <header>
+        <h1>Weather Report</h1>
+        <h3>For the lovely city of</h3>
+        <h2>✨City Name✨</h2>
+    </header>
+    <main>
+        <section>
+            <h2>Temperature</h2>
+            <h3>70</h3>
+            <button>Increase</button>
+            <button>Decrease</button>
+            <button>Convert</button>
+        </section>
+        <section>
+            <h2>Sky</h2>
+            <select name="sky">
+                <option value="---Select Sky Option---">---Select Sky Option---</option>
+                <option value="Sunny">Sunny</option>
+                <option value="Cloudy" selected>Cloudy</option>
+                <option value="Rainy">Rainy</option>
+                <option value="Snowy">Snowy</option>
+            </select>
+        </section>
+        <section>
+            <h2>City Name</h2>
+            <input type="text" name="city" placeholder="Seattle" value="">
+            <button>Reset</button>
+        </section>
+        <section>
+            <h2>Weather Garden</h2>
+            <div>
+                <div>☁️☁️ ☁️ ☁️☁️ ☁️ 🌤 ☁️ ☁️☁️</div>
+                <div>🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
+            </div>
+        </section>
+    </main>
+    <script src="src/index.js" type="text/javascript"></script>
 </body>
 </html>
