updates temp box to have responsive buttons and change color

--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
             <p id="landscape">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</p>
         </section>
     </section>
+    <script src="scripts/index.js" type="text/javascript"></script>
 </body>
 </html>
