--- a/index.html
+++ b/index.html
@@ -5,8 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
-    
+    <header id="city_name_header">
+        <h1 id="city_name">CITY NAME</h1>
+        <h1 id="weather_report">Weather Report</h2>
+    </header>
+    <section id="weather_body">
+        <div id="sky_emojis">SKY emojis</div>
+        <div id="ground_emojis">GROUND emjois</div>
+    </section>
+    <section id="change_widgets">
+        <section id="change_temp">
+            <h4>Temp</h4>
+            <div id="temp_buttons">
+                <button id="raise_temp">UP arrow</button>
+                <button id="lower_temp">DWN arrow</button>
+            </div>
+            <div id="temp_display">TempNUM</div>   
+        </section>
+        <section id="change_sky">
+            <h4>Sky</h4>
+            <!--  - "html select change event" is a reasonable Internet search to start.
+    - This feature requires you to research how do you get the _value_ of the `<select>` element. -->
+            <select id="sky_dropdown">dropdown menu</select>
+        </section>
+        <section id="change_city">
+            <h4>City</h4>
+            <input id="user_input">user input</input>
+            <button>Reset</button>
+        </section>
+    </section>
+    <script src="src/index.js" type="text/javascript"></script>
 </body>
 </html>
