temp is changing on up and down buttons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="city bg_br">
             <h2>City Name</h2>
             <div class="card-body">
-                <input id="get-city-name" placeholder="City name"/>
+                <input id="get-city-name" type='text' placeholder="City name"/>
                 <button id="reset">reset</button>
             </div>
         </div>
