add buttons, new containers, and format temp display

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="ul-container">
             <li id="temp" class="temp-deets">
                 <h2 class="text">Temperature</h2>
-                <div class="emoji-holder"></div>
+                <div id="emoji-holder"></div>
             </li>
             <li id="sky" class="deets">
                 <h2 class="text">Sky</h2>
