--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link rel="stylesheet" href="./styles/index.css"/>
 </head>
-<body>
-    
+<body class = "grid">
+    <header class=header>
+        <h1>Weather Report</h1>
+        <p>For the lovely city of Madeup</p>
+    </header>
+    <nav class="nav">
+        <ul>
+            <li id="temp" class="details">
+                <p class="text">Temperature</p>
+                <section>
+                    <p class="temperature-text">Temperature</p>
+                </section>
+            </li>
+            <li id="sky" class="details">
+                <p class="text">Sky</p>
+            </li>
+            <li id="city" class="details">
+                <p class="text">City Name</p>
+            </li>
+        </ul>
+    </nav>
+    <!-- <section id="temp"class="details"><span class="text">Temp</span></section>
+    <section id="sky"class="details"></section>
+    <section id="city"class="details"></section> -->
+
+    <main class="main">
+        <p id="display-title">Weather Garden</p>
+        <section id="weather-garden-display" class="garden-display">
+            <p>Weather Garden Display.</p>
+        </section>
+    </main>
+    <script src="scripts/index.js"></script>    
 </body>
 </html>
