adds change city input and link to city title works. Fix the box resizing based on the length of the city name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- CONTAINER -->
     <div class="container">
-      <h1>Weather Forecast for <span id="cityName">Denver</span> </h1>
+      <h1>Weather Forecast for <span id="header-City-Name">Denver</span> </h1>
 
       <!-- TEMP CONTAINER  -->
       <div id="card" class="temp-container">
@@ -42,7 +42,7 @@
       <div id="card" class="city-container">
         <section id="city">
           <h2>Enter a City</h2>
-              <input type="text" id="cityName" placeholder="Enter another city" />
+              <input type="text" id="cityNameInputField" placeholder="Enter another city" />
           <div class="city">
             <button id="city-button">
             <span id="city-button-title">Reset</span> </div>
