adds change sky feature

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="section3">
         <h4>Weather Garden</h4>
         <section id="garden">
-            <p id="sky">🌨❄️🌨🌨❄️❄️🌨❄️🌨❄️❄️🌨🌨</p>
+            <p id="sky">Don't show this</p>
             <p id="landscape">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</p>
         </section>
     </section>
