updates garden to change based on temperature

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <section id="section3">
         <h4>Weather Garden</h4>
         <section id="garden">
-            <p id="sky">Don't show this</p>
-            <p id="landscape">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</p>
+            <p id="sky">Sky - Don't show this</p>
+            <p id="landscape">Landscape - don't show this</p>
         </section>
     </section>
     <script src="scripts/index.js" type="text/javascript"></script>
