adds feature to update city name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section id="section1">
         <h1>Weather report</h1>
-        <h2>for Seattle</h2>
+        <h2>for ✨Seattle✨</h2>
     </section>
     <section id="section2">
         <section class="toggleBox" id="tempBox">
