incomplete html skeleton created

--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
-    
+    <section id="container">
+      <header>
+        <h1>Weather Report</h1>
+        <h5 id="sub-header">Should you leave your house today? Or nah? 🤔</h2>
+      </header>
+      <section>
+        <article id="temp">
+            <h3>Temperature degC</h3>
+            <p>19 degC</p>
+            <p id="lower temp"> ⬅️ </p>
+            <p id="higher temp"> ➡️ </p>
+        </article>
+      </section>
+
+      <section>
+        <article id="sky">
+            <h3>Sky</h3>
+            <p>Drop Down Menu</p>
+        </article>
+        <article id="city">
+            <h3>City Name</h3>
+            <p>Drop Down Menu</p>
+        </article>
+      </section>
+      <footer>
+        <p>Designed by Mariama</p>
+      </footer>
+    </section>
+    <script src="src/index.js"></script>
 </body>
 </html>
