initial set up, layout and styles

--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <main class="container">
+        <section class="title">
+            <h1> Today's darn<br> report</h>
+        </section>
+        <section class="city-name">
+            <p> for the city of:</p>
+        </section>
+        <section class="input">
+            <div class = "temp">
+                <div class = "up-down">
+                    <button>^</button>
+                    <button>v</button>
+                </div>
+                    <h2>30°</h>
+            </div>
+            <div class = "sky">
+                <h3>Sky</h>
+                <h4>Drop-down</h>
+            </div>
+            <div class = "input-city">
+                <h5>Input</h>
+            </div>
+
+        </section>
+        <section class="refresh">
+            <button class="button-refresh"> refresh button</button> 
+        </section>
+        <section class="display">
+            <p> display</p>
+        </section>
+    </main>
     
 </body>
 </html>
