Create function to handle Temperature

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
         <section class= "container-garden">
             <h2> Weather Garden</h2>
-            <div class="display-garden">
-                <p class = "display-sky"></p>
-                <p class ="display-plants"></p>
+            <div class="display-garden  inner-grid-garden">
+                <p id= "display-sky"  class ="inner-grid-sky"></p>
+                <p id ="display-landscape"  class ="inner-grid-land"></p>
             </div>
         </section>     
     </main>
