--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <main>
         <section>
             <h2>Temperature</h2>
-            <h3>70</h3>
-            <button>Increase</button>
-            <button>Decrease</button>
-            <button>Convert</button>
+            <h3 id="temp">70</h3>
+            <button id="increase-temp">Increase</button>
+            <button id="decrease-temp">Decrease</button>
+            <button id="convert-temp">Convert</button>
         </section>
         <section>
             <h2>Sky</h2>
-            <select name="sky">
+            <select name="sky" id="sky-menu">
                 <option value="---Select Sky Option---">---Select Sky Option---</option>
                 <option value="Sunny">Sunny</option>
                 <option value="Cloudy" selected>Cloudy</option>
@@ -40,7 +40,7 @@
             <h2>Weather Garden</h2>
             <div>
                 <div>☁️☁️ ☁️ ☁️☁️ ☁️ 🌤 ☁️ ☁️☁️</div>
-                <div>🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
+                <div id="garden">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
             </div>
         </section>
     </main>
