adds colors to button temp ranges

--- a/index.html
+++ b/index.html
@@ -14,13 +14,21 @@
     </header>
 
     <!-- CONTAINER -->
+    
+
+
     <div class="container">
+
+
+    <section id="headertitle">
       <h1>Weather Forecast for <span id="header-City-Name">Denver</span> </h1>
+    </section>
 
       <!-- TEMP CONTAINER  -->
       <div id="card" class="temp-container">
         <section id="temp">
           <h2>Temp</h2>
+          <p>Click button to change temperature.</p>
            
             <button id="warmer-button">
             <span id="city-button-title">Warmer</span> 
@@ -44,13 +52,13 @@
           <h2>Enter a City</h2>
               <input type="text" id="cityNameInputField" placeholder="Enter another city" />
           <div class="city">
-            <button id="city-button">
+            <button id="reset-city-button">
             <span id="city-button-title">Reset</span> </div>
         </section>
       </div>
 
       <!-- SKY SELECTION CONTAINER -->
-      <div id="card" class="sky-container">
+      <div id="card">
         <section id="sky">
           <h2>Select a Sky</h2>
           <div class="dropdown-sky">
