--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <body>
 <header>
     <h1>Weather Report</h1>
-    <h3>My hometown</h3>
+    <h3 id="headerCityName">My hometown</h3>
 </header>
 
 <section id="one" class="grid">
 <div class="box">
     <div class="column">
     <h2>Temperature</h2>
-    <button id="increaseTemp" class="arrow up"></button>
-    <p class="temp">58</p>
-    <button id="decreaseTemp" class="arrow down"></button>
+    <button id="increaseTemp" onclick="increase()">Increase</button>
+    <span id="count"></span>
+    <button id="decreaseTemp" onclick="descrease()">Decrease</button>
     </div>
     <div class="column custom-select">
     <h2>Sky</h2>
-    <select name="cars" id="cars">
+    <select id="skyOptions">
         <option value="1">Sunny</option>
         <option value="2">Cloudy</option>
         <option value="3">Rainy</option>
@@ -34,8 +34,8 @@
     <div id="cityName" class="column">
     <h2>City Name</h2>
     <form>
-        <input type="text" name="cityname" placeholder="Seattle">
-        <button type="reset">Reset</button>
+        <input type="text" id="cityInput" value="Seattle">
+        <button type="reset" id="reset">Reset</button>
     </form>
 </div>
 </section>
@@ -43,8 +43,8 @@
 <section id="two" class="grid">
     <div id="weatherGarden" class="box">
         <h2>Weather Garden</h2>
-        <p class="sky">"🌧🌈⛈🌧🌧💧⛈🌧🌦🌧💧🌧🌧"</p>
-        <p class="landscape">"🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲"</p>
+        <div id="sky"></div>
+        <div id="landscape"></div>
     </div>
 </section>
 <script src="/src/index.js"></script>
