--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <ul class="ul-container">
             <li id="temp" class="temp-deets">
                 <h2 class="text">Temperature</h2>
-                <div id="emoji-holder"></div>
+                <div id="temp-emoji-holder"></div>
             </li>
             <li id="sky" class="deets">
                 <h2 class="text">Sky</h2>
+                <button id="sky-display"></button>
             </li>
             <li id="city" class="deets">
                 <h2 class="text">City</h2>
@@ -31,10 +32,11 @@
     <section id="city"class="deets"></section> -->
 
     <main class="main">
-        <p id="display-title">Weather Garden</p>
-        <section id="weather-garden-display" class="garden-display">
-            <p>Weather Garden Display.</p>
-        </section>
+        <h2>Weather Garden</h2>
+        <div id="garden-display">
+            <p></p>
+            <p></p>
+        </div>
     </main>
     <script src="scripts/index.js"></script>
 </body>
