--- a/index.html
+++ b/index.html
@@ -7,14 +7,33 @@
     <title>Weather Report</title>
     <link rel="stylesheet" href="styles/index.css" />
   </head>
+  <header>
+    <h1>Show Me The Weather</h1>
+  </header>
   <body>
+    <img src="assets/sky_photo.jpg" alt="A photo of a cloudy sky" />
+
     <div class="pickerWindow">
-      <button id="clickButton">Click Me</button>
-      <select name="dropSelection" id="selectedSel">
-        <option value="1">Option 1</option>
-        <option value="2">Option 2</option>
-        <option value="3">Option 3</option>
+      <button id="clickButtonIn">Increase</button>
+      <button id="clickButtonDe">Decrease</button>
+      <label for="sky-select">Select a Sky View</label>
+      <select name="sky" id="sky-select">
+        <option value="">Please choose an option</option>
+
+        <option value="sunny">Sunny</option>
+        <option value="cloudy">Cloudy</option>
+        <option value="rainy">Rainy</option>
+        <option value="snowy">Snowy</option>
       </select>
+    </div>
+    <div>
+      <!-- Weather Type Photo here -->
+    </div>
+    <div>
+      <!-- Emojis go here -->
+    </div>
+    <div>
+      <!-- City Element goes here -->
     </div>
     <script src="src/index.js"></script>
   </body>
