--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 <body>
 <header>
-    <h1>Weather Report</h1>
-    <h3 id="headerCityName">My hometown</h3>
+    <h1>Weather Report</h1> 
+    <h3 id="headerCityName"></h3>
+    <h2>Weather Garden</h2>
+    <p id="skyrim">☁️☁️ ☁️ ☁️☁️ ☁️ 🌤 ☁️ ☁️☁️</p>
+    <p id="landscape">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</p>
 </header>
 
 <section id="one" class="grid">
@@ -40,13 +43,6 @@
 </div>
 </section>
 
-<section id="two" class="grid">
-    <div id="weatherGarden" class="box">
-        <h2>Weather Garden</h2>
-        <div id="sky"></div>
-        <div id="landscape"></div>
-    </div>
-</section>
 <script src="/src/index.js"></script>
 </body>
 </html>
