--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
         <section>
             <h2>Sky</h2>
-            <select name="sky" id="sky-menu">
+            <select name="sky-select" id="sky-menu">
                 <option value="---Select Sky Option---">---Select Sky Option---</option>
                 <option value="Sunny">Sunny</option>
                 <option value="Cloudy" selected>Cloudy</option>
@@ -34,12 +34,12 @@
         <section>
             <h2>City Name</h2>
             <input type="text" name="city" placeholder="Seattle" value="">
-            <button>Reset</button>
+            <button id="reset-city">Reset</button>
         </section>
         <section>
             <h2>Weather Garden</h2>
             <div>
-                <div>☁️☁️ ☁️ ☁️☁️ ☁️ 🌤 ☁️ ☁️☁️</div>
+                <div id="sky">☁️☁️ ☁️ ☁️☁️ ☁️ 🌤 ☁️ ☁️☁️</div>
                 <div id="garden">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
             </div>
         </section>
