Added main sections (html) and styling (css)

--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    
+    <section class="title-block">
+        <h1>
+            What is your weather like today?
+        </h1>
+    </section>
+
+    <section class="sky-block">
+        <h1>
+            What does your sky look like?
+        </h1>
+    </section>
+
+    <section class="landscape-block">
+        <h1>
+            Welcome to ...
+        </h1>
+    </section>
+
+    <section class="temp-block">
+        <h1>Temperature</h1>
+    </section>
 </body>
 </html>
