--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
 <body class = background>
 
     <header class = current-temp-box>
+        <h1>In the Lovely City of: </h1>
+        <br><input type= text id="namehere" onchange="displayname()"><br>
+        <script>
+            function displayname() {
+                document.getElementById("demo").innerHTML = 
+                document.getElementById("namehere").value;
+            }
+        </script>
+        <p class = big-text id="demo"></p>
+    </header>
+
+    <header class = current-temp-box>
         <!-- give a suitable heading using h1 tag-->
-        <h1>Temperature
+        <h1>The Current Temperature is:
             <div class="container">
                 <!-- adding button and heading to show the digits -->
                 <!-- increment() and decrement() functions on button click-->
@@ -21,23 +33,27 @@
             </div>
         </h1>
     </header>
-    <!-- JavaScript code-->
 
-    <header class="header">
-        <h1 class = current-temp-box>
-            HOMETOWN
+    <header class = current-temp-box>
+        <!-- give a suitable heading using h1 tag-->
+        <h1>The Sky Is:</h1>
+            <h2 class="dropdown">
+                <button class="dropbtn">???</button>
+                <div class="dropdown-content">
+                    <a href="#">Sunny</a>
+                    <a href="#">Cloudy</a>
+                    <a href="#">Rainy</a>
+                    <a href="#">Snowy</a>
+                </div>
+            </h2>
         </h1>
+    </header>
 
-        <h1 class = weather-garden-box>WEATHER GARDEN
-            <ul class = week-grid-container>
-                <li class = day-box>Mon</li>
-                <li class = day-box>Tues</li>
-                <li class = day-box>Wed</li>
-                <li class = day-box>Thurs</li>
-                <li class = day-box>Fri</li>
-                <li class = day-box>Sat</li>
-                <li class = day-box>Sun</li>
-            </ul>
+    <header class = current-temp-box>
+        <h1>And the Garden Looks Like:
+            <ul>
+                <li>🌧🌈⛈🌧🌧💧⛈🌧🌦🌧💧🌧🌧</li>
+                <li>🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃</li>
         </h1>
     </header>
 
