--- a/index.html
+++ b/index.html
@@ -18,27 +18,36 @@
         <section class="input">
             <div class = "temp">
                 <div class = "up-down">
-                    <button>^</button>
-                    <button>v</button>
+                    <button id ="up"><img src= "assets/chevron-up.png"></button>
+                    <button id="down"><img src= "assets/chevron-down.png"></button>
                 </div>
-                    <h2>30°</h>
+                    <h2 id="degrees"></h>
             </div>
             <div class = "sky">
-                <h3>Sky</h>
-                <h4>Drop-down</h>
+                    <label class="label-sky">Sky:</label>
+                    <select name="sky" id="skies">
+                      <option value="Sunny">Sunny</option>
+                      <option value="Cloudy">Cloudy</option>
+                      <option value="Rainy">Rainy</option>
+                      <option value="Snowy">Snowy</option>
+                    </select>
             </div>
             <div class = "input-city">
-                <h5>Input</h>
+                <form>
+                    <label for="fname">Enter city:</label>
+                    <br>
+                    <input type="text" id="input" name="input">
+                </form>
             </div>
 
         </section>
         <section class="refresh">
-            <button class="button-refresh"> refresh button</button> 
+            <button class="button-refresh"> reset button <img src= "assets/arrow.png"></button> 
         </section>
         <section class="display">
             <p> display</p>
         </section>
     </main>
-    
+    <script src="src/index.js" type="text/javascript"></script>
 </body>
 </html>
