working buttons and input

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <!-- weather heading -->
     <header></header>
 <!-- weather garden -->
-    <main>
+    <main id="weather">
         <p>Weather Garden</p>
         <section id="weather-garden-container">
-
+            <div id="skyscape">skyscape</div>
+            <div id="landscape">landscape</div>
         </section>
         </div>
 
@@ -22,17 +23,17 @@
 <!-- temperature -->   
     <section id="temperature-container">
         <p id="temperature-title">Temperature</p>
-        <button id="down-button">down</button>
-        <span id="degrees"> F</span>
-        <span>F</span>
-        <button id="up-button">up</button>
+        <button id="down-button">⬇️</button>
+        <span id="degrees">click for temperature!</span>
+        <span></span>
+        <button id="up-button">⬆️</button>
     </section>
 <!-- sky -->  
     <section class="sky-box">
         <div class="sky-title">
             <p>Sky</p>
         </div>
-        <select name="cars" id="cars">
+        <select name="dropdown" id="dropdown">
             <option value="sunny">Sunny</option>
             <option value="cloudy">Cloudy</option>
             <option value="rainy">Rainy</option>
