--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <title>Weather Report</title>
 </head>
 <body>
+    <h1 id="heading">Weather Report</h1>
+
+    <div id="temp-box">
+        <button id="up">Up</button>
+        <p id="temp">TBD</p>
+        <button id="down">Down</button>
+    </div>
     
+    <div id="sky-selector">
+        <label for="sky">Choose the weather:</label>
+        <select name="sky" id="sky">
+            <option value="sunny">Sunny</option>
+            <option value="rainy">Rainy</option>
+            <option value="snowy">Snowy</option>
+        </select>
+    </div>
+
+    <div id="city">
+        <form>City
+            <input type="text" name="city-name" size="20">
+        </form>
+    <div id="emoji-scene">
+    </div>
 </body>
 </html>
