--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
             <h2>Temperature</h2>
             <img src="assets/images/temp_clipart.jpeg" alt="thermometer clipart" width="150px" height="150px">
             <div id="temp-arrow">
-                <span>◀</span>
-                <span>▶</span>
+                <span id="decreaseArrow">◀</span>
+                <span id="increaseArrow">▶</span>
             </div>
-            <div id="temp-number">49</div>
+            <div id="temp-number"></div>
             <p><span id='date-time'></span></p>
         </section>
         <section id="sky-container" class="background">
             <h2>Sky</h2>
-            <img src="assets/images/sky_clipart3.png" alt="cloudy clipart" width="170px" height="170px">
+            <img id="skyImage" src="assets/images/sky_clipart3.png" alt="cloudy clipart" width="170px" height="170px">
             <select id="selectSky">
-                <option value="sunny">Sunny</option>
                 <option value="cloudy">Cloudy</option>
+                <option value="sunny">Sunny</option>
                 <option value="rainy">Rainy</option>
                 <option value="snowy">Snowy</option>
             </select>
@@ -41,7 +41,7 @@
         </section>
         <section id="layout-container" class="background">
             <h2>Layout</h2>
-            <div id="layout-image"><img src="assets/images/layout_sunny1.jpeg" height="170px" width="170px" alt="sunset"></div>
+            <div id="layout-image-container"><img id="layout-image"src="assets/images/layout_sunny1.jpeg" height="170px" width="170px" alt="sunset"></div>
         </section>
 
     </main>
