--- a/index.html
+++ b/index.html
@@ -20,23 +20,27 @@
             </li>
             <li id="sky" class="deets">
                 <h2 class="text">Sky</h2>
-                <button id="sky-display"></button>
+                <div class="dropdown">
+                    <button onclick="changeSky()" class="dropbtn">Dropdown</button>
+                    <div id="myDropdown" class="dropdown-content">
+                        <span>Sunny</span>
+                        <span>Cloudy</span>
+                        <span>Rainy</span>
+                        <span>Snowy</span>
+                    </div>
+                    </div>
             </li>
             <li id="city" class="deets">
                 <h2 class="text">City</h2>
             </li>
         </ul>
     </nav>
-    <!-- <section id="temp"class="deets"><span class="text">Temp</span></section>
-    <section id="sky"class="deets"></section>
-    <section id="city"class="deets"></section> -->
-
     <main class="main">
         <h2>Weather Garden</h2>
-        <div id="garden-display">
-            <p></p>
-            <p></p>
-        </div>
+        <ul id="garden-display">
+            <li id ="garden-clouds">☁️☁️ ☁️ ☁️☁️ ☁️ 🌤 ☁️ ☁️☁️</li>
+            <li id ="garden-flowers">🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃</li>
+        </ul>
     </main>
     <script src="scripts/index.js"></script>
 </body>
