--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="styles/index.css" rel="stylesheet">
 </head>
-<body>
-    <section>
+<body class="container">
+    <section class="heading">
         <h1>Weather Report For</h1>
         <h2 id= "cityDisplay">New York</h2>
     </section>
 
-    <section class="tempDefault">
+    <section class="tempDefault border border-dark">
         <h2>Temperature</h2>
         <h2 id= "currentTemp">60°F</h2>
         <button id= "decrease">-</button>
         <button id= "increase">+</button>
     </section>
 
-    <section>
+    <section class="skyLevel border border-primary">
         <h2>Sky</h2>
         <select class= "skyChoice" name="skyChoice">
             <option value="sunny">Sunny</option>
@@ -28,9 +29,10 @@
             <option value="rainy">Rainy</option>
             <option value="snowy">Snowy</option>
         </select>
+        <p id= "sky">☁️☀️☁️☀️☁️☀️☁️☀️☁️☀️☁️</p>
     </section>
 
-    <section>
+    <section class="citySelect border border-success">
         <h2>Which city?</h2>
         <label for="city">City</label>
         <form id = "cityForm">
@@ -39,12 +41,10 @@
         </form>
     </section>
 
-    <section>
+    <section class="weatherLandscape">
         <h2>Weather Landscape</h2>
-        <p id= "sky">☁️☀️☁️☀️☁️☀️☁️☀️☁️☀️☁️</p>
         <p id= "landscape">🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃</p>
     </section>
-
     <script type="text/javascript "src="src/index.js"></script>
 </body>
 </html>
