--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
-<!-- element for temp
-a clickable element to change temp
-element that dispalys a landscape -->
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>weather-report</title>
-    <link href="styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="styles/index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <main>
@@ -19,14 +15,32 @@ element that dispalys a landscape -->
         <h3>Temperature</h3>  
         <button id="tempUp">⬆️</button>
         <button id="tempDown">⬇️</button>
-        <p id = "temp"></p>        
+        <p id="temp"> 75</p>        
       </section>
 
     <section> 
     <h3>Sky</h3>   
-      
+    <select name="sky" id="sky">
+        <option value="sunny">Sunny</option>
+        <option value="cloudy">Cloudy</option>
+        <option value="rainy">Rainy</option>
+        <option value="snowy">Snowy</option>
+      </select>
     </section>    
-     
+
+    <section> 
+    <h3>City Name</h3> 
+    <input type="text">
+    <input type="reset" value="Reset">    
+    </section>    
+
+    <section> 
+    <h3> Weather Garden</h3> 
+    <p id="weather">☁️ ☁️ ☁️ ☀️ ☁️ ☁️ ☁️</p>
+    <p id="landscape">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</p>
+
+    </section>    
+
       <section id="tempContainer">
 
 
