blocks out general sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Weather Report</title>
 </head>
 <body>
-    <h1>Weather Report Cabebe!</h1>
+    <section id="title">
+        <h1>Weather Report Cabebe!</h1>
+    </section>
+    <section id="city-display"></section>
+    <section id="sky-display"></section>
+    <section id="city-input-block"></section>
+    <section id="temperature-block"></section>
+    <section id="sky-select-block"></section>
+    <section id="landscape-block"></section>
 </body>
 </html>
