--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1><span>Seattle </span>Weather Report</h1>
+        <h1><span id="cityName">Seattle</span> Weather Report</h1>
     </header>
         <main id="main-container">
         <section id="temp-container" class="background">
@@ -36,8 +36,8 @@
         <section id="city-container" class="background">
             <h2>City</h2>
             <img src="assets/images/city_clipart.jpeg" alt="cloudy clipart" width="170px" height="170px">
-            <input class="input-margin"type="text" value="Seattle">
-            <button class="input-margin">reset</button>
+            <input id="cityNameInput" class="input-margin"type="text" value="Seattle">
+            <button id="resetCityNameBtn" class="input-margin">reset</button>
         </section>
         <section id="layout-container" class="background">
             <h2>Layout</h2>
