--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet" />
 </head>
 <body>
     <section id="title">
-        <h1>Weather Report Cabebe!</h1>
+        <h1 id="title-text">Weather Report Cabebe!</h1>
     </section>
-    <section id="city-display"></section>
-    <section id="sky-display"></section>
-    <section id="city-input-block"></section>
-    <section id="temperature-block"></section>
-    <section id="sky-select-block"></section>
-    <section id="landscape-block"></section>
+    <section id="city-display">Placeholder: City Text!</section>
+    <section id="sky-display">Placeholder: Image of a sky</section>
+    <section id="city-input-block">Placeholder: input box for city here</section>
+    <section id="temperature-block">
+        <button id="increase-temp">⬆️</button>
+        <h2>Temperature</h2>
+        <button id="decrease-temp">⬇️</button>
+    </section>
+    <section id="sky-select-block">Placeholder: dropdown button for Sky!</section>
+    <section id="landscape-block">Placeholder: picture of a landscape</section>
 </body>
 </html>
