--- a/index.html
+++ b/index.html
@@ -5,59 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel ="stylesheet">
 </head>
 <body>
-    <div class = 'Header'>
+    <div class ='header' id ='pageTitle'>
         <h1>Weather Report</h1>
-        <div class ='Sub header'>
+        <div class ='header' id='lovelyCity'>
             <p>for the lovely city of</p>
         </div>
-        <div class ='Mutable sub header'>
-            <p>My Hometown</p>
+        <div class ='header' id='mutableSubHeader'>
         </div>
     </div>
-    <section class ='Mutable Components'>
-        <div class ='Temperature Changer'>
-            <div class ='Temperature Title'>
+    <section class ='mutableComponents'>
+        <div class = 'widget' id ='temperatureChanger'>
+            <div class = 'widget text' id ='Temperature Title'>
                 <p>Temperature</p>
             </div>
-            <div class ='Arrow keys'>
-                <div class ='Upper Arrow'>
+            <div class ='arrowKeys'>
+                <div id ='Upper Arrow'>
+                    <button id ='upArrow'>⬆️</button>
                 </div>
-                <div class ='Lower Arrow'>
+                <div id ='Lower Arrow'>
+                    <button id ='downArrow'>⬇️</button>
                 </div>
             </div>
-            <div class = 'Temperature Display'>
+            <div class ='widgetText' id = 'temperatureDisplay'>
             </div>
         </div>
-        <div class ='Sky Changer'>
-            <div class='Sky Title'>
+        <div class = 'widget' id ='skyChanger'>
+            <div class = 'widgetText' id='skyTitle'>
                 <p>Sky</p>
             </div>
-            <div class ='Dropdown Menu'>
+            <div class ='dropdownMenu'>
+                <select name ="Select Weather" id ='dropdownButton'>
+                <option value="sunny">Sunny</option>
+                <option value="cloudy">Cloudy</option>
+                <option value="rainy">Rainy</option>
+                <option value="snowy">Snowy</option>
+                </select>
             </div>
         </div>
-        <div class ='Hometown Changer'>
-            <div class ='Display Text'>
+        <div class ='widget' id ='hometownChanger'>
+            <div class ='widget text' id = 'Hometown Title'>
                 <p>City Name</p>
             </div>
-            <div class ='Type Field'>
-            </div>
-            <div class ='Button'>
-            </div>
+            <form id="hometownForm">
+                <label>City Input: <input type='text' id='cityInput'></label>
+                <button type='submit' id='submitInput'>Submit</button>
+            </form>
         </div>
     </section>
     <div class ='Visual Component'>
         <div class='Immutable Title'>
             <p>Weather Garden</p>
         </div>
-        <div class='Background'>
-            <div class='Top Display'>
+        <div class='gardenBackground'>
+            <div class='display' id='topDisplay'>
             </div>
-            <div class='Bottom Display'>
+            <div class='display' id='bottomDisplay'>
+                <p>Mutable Emojis</p>
             </div>
         </div>
     </div>
+    <script src ="src/index.js" type="text/javascript"></script>
 </body>
 </html>
 
