change color of temp when increase or decrease buttons clicked

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="controls-container">
         <section class="controls">
           <h2>Temperature</h2>
-          <p id="current-temp" class="mid">68</p>
+          <p id="current-temp"></p>
           <div id="temp-btns">
             <button id="increase-temp">+</button>
             <button id="decrease-temp">-</button>
