--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
           <option value="rainy">Rainy</option>
           <option value="snowy">Snowy</option>
         </select>
-        <div>
-          <h3 class="city-container">City Name</h3>
-            <input placeholder="City name"/>
-
-        </div>
+        <section> 
+          <h3>City Name</h3> 
+          <input type="text">
+          <input type="reset" value="Reset">    
+          </section> 
       </section>  
       <section class="weather-garden">
         <h2>Weather Garden</h2>
-        <div id="sky-emojis">🌧🌈⛈🌧🌧💧⛈🌧🌦🌧💧🌧🌧</div>
+        <div id="sky-emojis">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</div>
         <br>
         <div id="ground-emojis">🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
       </section>
