--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section class="garden">
         <h2>Weather Garden</h2>
         <p id="sky">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</p>
-        <p id="landscape">🌾🌾_🍃_🪨__🛤_🌾🌾🌾_🍃</p>
+        <p id="landscape"></p>
       </section>
     </main>
   </body>
