change sky based on current selected sky

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <section class="garden">
         <h2>Weather Garden</h2>
-        <p id="sky">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</p>
+        <p id="sky"></p>
         <p id="landscape"></p>
       </section>
     </main>
